# Django-Newspaper

./: README.md
Newspaper/: db.sqlite3  pyproject.toml
Newspaper/accounts/: admin.py  forms.py  models.py  urls.py  views.py
Newspaper/accounts/migrations/: 0001_initial.py
Newspaper/newspaper_project/: asgi.py  settings.py  urls.py  wsgi.py
Newspaper/templates/: base.html  home.html
Newspaper/templates/registration/: login.html  signup.html
